@@ -1,8 +1,9 @@
 Package: multcomp
 Title: Simultaneous Inference for General Linear Hypotheses
 Version: 0.991-6
-Date: $Date$, $Revision$
-Author: Torsten Hothorn, Frank Bretz and Peter Westfall
+Date: $Date$
+Author: Torsten Hothorn, Frank Bretz and Peter Westfall with
+  contributions by Richard M. Heiberger
 Description: Simultaneous tests and confidence intervals
   for general linear hypotheses in parametric models, including 
   linear, generalized linear, linear mixed effects, and survival models.
