@@ -19,3 +19,24 @@ stopifnot(identical(cht1, print(cht1)))
 ### was: error
 summary(cht1)$test
 
+
+### NAs in coefficients
+tmp.data <- data.frame(EE=gl(2, 1, 24, letters[1:2]),
+                FF=gl(3, 2, 24, LETTERS[3:5]),
+                GG=gl(4, 6, 24, letters[6:9]))
+tmp.data$x <- rep(12, 24)
+tmp.data$y <- rep(7, 24)
+tmp.data$z <- c(9, 14, 3, 4, 15, 1, 11, 13, 24, 10, 22, 18,
+                20, 21, 6, 7, 16, 2, 19, 12, 17, 8, 23, 5)
+tmp.data$w <- c(15, 9, 18, 21, 17, 11, 23, 12, 1, 10, 2, 14, 24, 7,
+                13, 4, 5, 19, 16, 20, 3, 8, 22, 6)
+
+tmp.aov <- aov(z ~ EE+FF*GG + x*y +x*EE + y*FF, data=tmp.data)
+
+try(glht(tmp.aov, linfct=mcp(EE="Tukey")))
+try(glht(tmp.aov, linfct=mcp(FF="Tukey")))
+glht(tmp.aov, linfct=mcp(GG="Tukey"))
+
+### covariate interactions: fire a warning
+tmp.aov <- aov(z ~ w*GG , data=tmp.data)
+glht(tmp.aov, linfct = mcp(GG = "Tukey"))
