@@ -1,5 +1,5 @@
 
-R version 2.4.0 (2006-10-03)
+R version 2.5.0 Under development (unstable) (2006-12-12 r40165)
 Copyright (C) 2006 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -135,5 +135,29 @@ Linear Hypotheses:
 (Intercept) == 0   6.8967
 ecog.ps == 0      -0.3850
 rx == 0            0.5286
+
+> 
+> ### new `means' comparisons
+> amod <- aov(weight ~ dose + gesttime + number, data = litter)
+> confint(glht(amod, linfct = mcp(dose = "Means")))
+
+	 Simultaneous Confidence Intervals for General Linear Hypotheses
+
+Multiple Comparisons of Means: Mean Contrasts
+
+
+Fit: aov(formula = weight ~ dose + gesttime + number, data = litter)
+
+Estimated Quantile = 2.5559
+
+Linear Hypotheses:
+         Estimate lwr     upr    
+0 == 0   32.3651  30.0804 34.6499
+5 == 0   29.0127  26.6371 31.3883
+50 == 0  30.0743  27.5239 32.6247
+500 == 0 29.6899  27.1590 32.2208
+
+95% family-wise confidence level
+ 
 
 > 
